--- a/client.html
+++ b/client.html
@@ -1,26 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title></title>
+    <title>websocket即时聊天室</title>
     <meta http-equiv="content-type" content="text/html;charset=utf-8">
     <style>
         p {
             text-align: left;
             padding-left: 20px;
         }
+        .dialog{
+            width: 800px;height: 600px;margin: 30px auto;text-align: center;
+        }
+        .dialog_border{
+            width: 800px;border: 1px solid gray;height: 300px;
+        }
+        .msg_list{
+            width: 598px;border:  1px solid gray; height: 300px;overflow: scroll;float: left;
+        }
     </style>
 </head>
 <body>
-<div style="width: 800px;height: 600px;margin: 30px auto;text-align: center">
+<div class="dialog">
     <h1>websocket聊天室</h1>
-    <div style="width: 800px;border: 1px solid gray;height: 300px;">
-        <div style="width: 200px;height: 300px;float: left;text-align: left;">
+    <div class="dialog_border">
+        <div class="msg_list">
             <p><span>当前在线:</span><span id="user_num">0</span></p>
             <div id="user_list" style="overflow: auto;">
-
             </div>
         </div>
-        <div id="msg_list" style="width: 598px;border:  1px solid gray; height: 300px;overflow: scroll;float: left;">
+        <div id="msg_list" class="msg_list">
         </div>
     </div>
     <br>
@@ -103,10 +111,13 @@
         var content = msg_box.value;
         var reg = new RegExp("\r\n", "g");
         content = content.replace(reg, "");
+        if(!content){
+            alert('消息不能为空');
+            return;
+        }
         var msg = {'content': content.trim(), 'type': 'user'};
         sendMsg(msg);
         msg_box.value = '';
-        // todo 清除换行符
     }
 
     /**
